更改服务器

--- a/httpd/templates/工步/main.html
+++ b/httpd/templates/工步/main.html
@@ -5,7 +5,7 @@
     <title>工步编辑页面</title>
     {% include "base-head.html" %}
     <script>
-        var api = WsApi('/newline/step/','onlwe.com');
+        var api = WsApi('/newline/step/','onlwe.com:8888');
         var newline = NewLine(api);
 
         api.ready(function () {
