--- a/httpd/templates/工步/show.html
+++ b/httpd/templates/工步/show.html
@@ -194,6 +194,7 @@
                 <div class="row">
                     <div class="col-xs-6">当前可编辑工步列表</div>
                     <div class="col-xs-6 text-right">
+                        <a class="btn btn-success btn-xs" onclick="javascript:window.location.href='/steps/editor/'">编辑</a>
                         <a class="btn btn-default btn-xs" onclick="javascript:start_steps()">开始</a>
                         <a class="btn btn-default btn-xs" onclick="javascript:pause_steps()">暂停</a>
                         <a class="btn btn-default btn-xs" onclick="javascript:stop_steps()">停止</a>
